--- a/Restaurante/css/estilos.css
+++ b/Restaurante/css/estilos.css
@@ -14,11 +14,19 @@
 @keyframes mymove {
    0% {transform:scale(1);} 
    50%{transform:scale(1.5);}
-   75%{top:0; transform:rotate(-30deg); transition-delay: 1s;}
    /*   80%{transform:rotate(180deg); transition-delay: 1s;}
    90%{transform:rotate(270deg); transition-delay: 1s;}
     100%{transform:rotate(360deg); transition-delay: 1s;}*/
   }
+
+
+  @keyframes titulos {
+    0% {transform:scale(1);} 
+    50%{transform:scale(1.5);}
+    /*   80%{transform:rotate(180deg); transition-delay: 1s;}
+    90%{transform:rotate(270deg); transition-delay: 1s;}
+     100%{transform:rotate(360deg); transition-delay: 1s;}*/
+   }
 /*=================================================================
                             ETIQUETAS
 ====================================================================*/
@@ -30,6 +38,7 @@ body{
     background-size: cover;
     font-family:'Asap';
     text-transform: uppercase;
+    z-index: 1;
     
 }
 
@@ -53,11 +62,17 @@ footer{
                                  CLASES
 =====================================================================*/
 
+.borde-abajo{
+    border: 1px solid #f2f2f2;
 
+}
+
+.fondo-negro{
+    background-color: #678B5F;
+}
 
 .separar{
     margin-bottom: 10px;
-    border-bottom: 1px solid #f2f2f2;
     padding: 17.5px;
     color:#f2f2f2;
     
@@ -73,6 +88,10 @@ footer{
 .pading{
     padding-right:15px;
     padding-left: 15px;
+}
+
+.resta-padding{
+    margin: 0 -15px 0 -15px;
 }
 
 
@@ -192,31 +211,17 @@ footer{
     border:1px solid #f2f2f2
 }
 
+/*
+
 .margen-arriba{
-    margin-top: 40px
+    margin-bottom:20px;
 }
+*/
 
 .orden{
     order:2;
 }
 
-.cabecera .menu{
-    /*SOLO PARA MOBILE*/
-    /*
-    position: fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    */
-    /*posicion de columna*/
-    /*
-    flex-direction: column ;
-    */
-}
 
 .cabecera .ham{
     color:#f2f2f2;
@@ -262,14 +267,19 @@ footer{
 }
 
 
+.contenedor-carta{
+    width: 100%;
+}
+
 
 .contenedor-full{
     width: 100%;
-    padding: 0 15px;
+    padding: 0 30px;
 }
 
 .centrar-texto{
     text-align: center;
+    border-bottom: 1px solid #d2d2d2;
 
 }
 
@@ -297,8 +307,8 @@ footer{
 
 
 .seccion{
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 
@@ -308,7 +318,7 @@ footer{
     position:relative;
     animation-name: mymove;
     animation-timing-function: ease;
-    animation-duration: 5s;
+    animation-duration: 3s;
 
 }
 
@@ -340,6 +350,11 @@ footer{
     margin-top: 0;
     text-align: center;
     font-size:40px;
+}
+
+.margen-lados {
+    margin-left: 15px;
+    margin-right: 15px;
 }
 /*====================================================================
                          ID
@@ -426,19 +441,21 @@ footer{
 
 #lacarta .scale{
     position: relative;
-    transform: scale(2);
+    transform: scale(1);
 }
 
 #servicios h2{
     position: relative;
-    transform: scale(2);
+    transform: scale(1);
+    margin-top:0;
+    display: block;
 }
 
 
 
 #locales h2{
     position: relative;
-    transform: scale(2);
+    transform: scale(1);
 }
 
 #locales li a{
@@ -460,6 +477,7 @@ footer{
 }
 
 #servicios .contenedor-servicio{
+    background-color: #003E1F;
     position:relative;
     text-align: center;
     background: transparent;
@@ -471,12 +489,13 @@ footer{
 }
 
 
-#servicios .contenedor-servicio:hover{
+
+
+#servicios p:hover{
     position:relative;
     animation-name: mymove;
     animation-timing-function: linear;
     animation-duration: 3s;
-
 }
 
 #servicios i{
@@ -495,6 +514,7 @@ footer{
 
 #testimonios .contenedor{
     position: relative;
+    z-index: index 4; ;
 }
 
 .video-fondo{
@@ -505,17 +525,15 @@ footer{
     height: 100%;
     object-fit: cover;
     object-position: center;
+    z-index: 2;
+    opacity: 0.5;
     
 }
 
-video{
-    background: #000;
-    opacity: 0.5;
-    z-index: 2;
-}
 
 #testimonios p{
-    z-index: 1;
+    position: relative;
+    z-index: 2;
     
 }
 
@@ -523,4 +541,597 @@ video{
     filter: grayscale(1);
 
 }
+
+.trama-video{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-image: linear-gradient(to right, transparent, rgba(226 90 90 / 20%));
+    z-index: 3;
+
+}
+
+#testimonios h2{
+    position: relative;
+    z-index: 2;
+}
+
+
+
+
+@media (max-width:768px),(orientation: Landscape){
+    body h2{
+        color:#f2f2f2;
+    }
+
+    body p{
+        font-size:15px;
+    }
+
+    .titulos{
+        font-size:20px;
+    }
+
+   
+
+   
+    .contenedor{
+        width: 100%;
+    }
+    .contenedor-full{
+        width: 100%;
+        padding: 0 30px;
+    }
+    .columna-mobile-100{
+        width: 100%;
+    }
+
+    .columna-mobile-50{
+        width: 50%;
+    }
+    .columna-mobile-41{
+        width:41.66%;
+    }
+
+    .columna-mobile-33{
+        width: 33.3%
+    }
+
+    .columna-mobile-25{
+        width: 25%;
+    }
+
+    .columna-mobile-16{
+        width: 16.66%
+    }
+    
+    .columna-mobile-8{
+        width:8.33%;
+    }
+
+    header  .contenedor nav{
+        display: none;
+    }
+
+    .cabecera .ham{
+        display: block;
+    }
+
+    .margen-abajo-mobile{
+        margin-bottom: 5px;
+    }
+
+    #locales p{
+        color:#f2f2f2;
+        font-size:15px;
+    }
+
+    #servicios .separar{
+        color:#f2f2f2;
+        
+    }
+
+    #servicios .fab{
+        color:#f2f2f2;
+    }
+
+    #servicios h2{
+        transform: scale(1);
+
+    
+    }
+
+    
+
+    #locales h2{
+        transform: scale(1);
+       
+       
+    }
+
+    .margen-lados{
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+
+
+
+    #lacarta .titulos{
+        transform: scale(1);
+        
+    }
+    .margen-abajo-mobile{
+        margin-bottom:10px;
+    }
+    #servicios p:hover{
+        position:relative;
+        animation-name: mymove;
+        animation-timing-function: linear;
+        animation-duration: 3s;
+    }
+
+    .separar{
+        font-size:15px;
+    }
+    
+    #banner p{
+        font-size:13px;
+    }
+
+    #banner h1{
+        font-size:14px;
+
+    }
+
+    .boton{
+        font-size: 15px;
+        padding:5px 10px;
+        text-decoration: none;
+        text-align: center;
+        border:1px solid #003E1F;
+        border-radius: 15%;
+        text-transform: uppercase;
+        color:#678B5F;
+        background-color:#D0E562;
+    }
+
+    
+}
+
+
+@media (max-width:767px),(orientation: Landscape){
+    body h2{
+        color:#f2f2f2;
+    }
+
+    body p{
+        font-size:15px;
+    }
+
+    .titulos{
+        font-size:20px;
+    }
+
+   
+
+   
+    .contenedor{
+        width: 100%;
+    }
+    .contenedor-full{
+        width: 100%;
+        padding: 0 30px;
+    }
+    .columna-mobile-100{
+        width: 100%;
+    }
+
+    .columna-mobile-50{
+        width: 50%;
+    }
+    .columna-mobile-41{
+        width:41.66%;
+    }
+
+    .columna-mobile-33{
+        width: 33.3%
+    }
+
+    .columna-mobile-25{
+        width: 25%;
+    }
+
+    .columna-mobile-16{
+        width: 16.66%
+    }
+    
+    .columna-mobile-8{
+        width:8.33%;
+    }
+
+    header  .contenedor nav{
+        display: none;
+    }
+
+    .cabecera .ham{
+        display: block;
+    }
+
+    .margen-abajo-mobile{
+        margin-bottom: 5px;
+    }
+
+    #locales p{
+        color:#f2f2f2;
+        font-size:15px;
+    }
+
+    #servicios .separar{
+        color:#f2f2f2;
+        
+    }
+
+    #servicios .fab{
+        color:#f2f2f2;
+    }
+
+    #servicios h2{
+        transform: scale(1);
+
+    
+    }
+
+    
+
+    #locales h2{
+        transform: scale(1);
+       
+       
+    }
+
+    .margen-lados{
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+
+
+
+    #lacarta .titulos{
+        transform: scale(1);
+        
+    }
+    
+    .margen-abajo-mobile{
+        margin-bottom:10px;
+    }
+    #servicios p:hover{
+        position:relative;
+        animation-name: mymove;
+        animation-timing-function: linear;
+        animation-duration: 3s;
+    }
+
+    .separar{
+        font-size:15px;
+    }
+    
+    #banner p{
+        font-size:13px;
+    }
+
+    #banner h1{
+        font-size:14px;
+
+    }
+
+    .boton{
+        font-size: 15px;
+        padding:5px 10px;
+        text-decoration: none;
+        text-align: center;
+        border:1px solid #003E1F;
+        border-radius: 15%;
+        text-transform: uppercase;
+        color:#678B5F;
+        background-color:#D0E562;
+    }
+
+    
+}
+
+@media (max-width:600px){
+    #banner .fila{
+        display: none;
+    }
+
+}
+
+
+
+@media (max-width:1199px), (orientation: Landscape){
+    body h2{
+        color:#f2f2f2;
+    }
+
+    body p{
+        font-size:15px;
+    }
+
+    .titulos{
+        font-size:20px;
+    }
+
+   
+
+   
+    .contenedor{
+        width: 100%;
+    }
+    .contenedor-full{
+        width: 100%;
+        padding: 0 30px;
+    }
+    .columna-mobile-100{
+        width: 100%;
+    }
+
+    .columna-mobile-50{
+        width: 50%;
+    }
+    .columna-mobile-41{
+        width:41.66%;
+    }
+
+    .columna-mobile-33{
+        width: 33.3%
+    }
+
+    .columna-mobile-25{
+        width: 25%;
+    }
+
+    .columna-mobile-16{
+        width: 16.66%
+    }
+    
+    .columna-mobile-8{
+        width:8.33%;
+    }
+
+    header  .contenedor nav{
+        display: none;
+    }
+    
+
+    .cabecera .ham{
+        display: inline-block;
+    }
+
+    .margen-abajo-mobile{
+        margin-bottom: 5px;
+    }
+
+    #locales p{
+        color:#f2f2f2;
+        font-size:15px;
+    }
+
+    #servicios .separar{
+        color:#f2f2f2;
+        
+    }
+
+    #servicios .fab{
+        color:#f2f2f2;
+    }
+
+    #servicios h2{
+        transform: scale(1);
+
+    
+    }
+
+    
+
+    #locales h2{
+        transform: scale(1);
+       
+       
+    }
+
+    .margen-lados{
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+
+
+
+    #lacarta .titulos{
+        transform: scale(1);
+        
+    }
+
+    
+    .margen-abajo-mobile{
+        margin-bottom:10px;
+    }
+    #servicios p:hover{
+        position:relative;
+        animation-name: mymove;
+        animation-timing-function: linear;
+        animation-duration: 3s;
+    }
+
+    .separar{
+        font-size:15px;
+    }
+    
+    #banner p{
+        font-size:13px;
+    }
+
+    #banner h1{
+        font-size:14px;
+
+    }
+
+    .boton{
+        font-size: 15px;
+        padding:5px 10px;
+        text-decoration: none;
+        text-align: center;
+        border:1px solid #003E1F;
+        border-radius: 15%;
+        text-transform: uppercase;
+        color:#678B5F;
+        background-color:#D0E562;
+    }
+
+    
+}
+
+
+
+@media (max-width:992px),(orientation: Landscape){
+    body h2{
+        color:#f2f2f2;
+    }
+
+    body p{
+        font-size:15px;
+    }
+
+    .titulos{
+        font-size:20px;
+    }
+    .contenedor-full{
+        width: 100%;
+        padding: 0 30px;
+    }
+   
+    .contenedor{
+        width: 100%;
+    }
+    .columna-mobile-100{
+        width: 100%;
+    }
+
+    .pading-mobile{
+        padding-right:15px;
+        padding-left: 15px;
+    }
+
+    .columna-mobile-50{
+        width: 50%;
+    }
+    .columna-mobile-41{
+        width:41.66%;
+    }
+
+    .columna-mobile-33{
+        width: 33.3%
+    }
+
+    .columna-mobile-25{
+        width: 25%;
+    }
+
+    .columna-mobile-16{
+        width: 16.66%
+    }
+    
+    .columna-mobile-8{
+        width:8.33%;
+    }
+
+    header  .contenedor nav{
+        display: none;
+    }
+
+    .cabecera .ham{
+        display: block;
+    }
+
+    .margen-abajo-mobile{
+        margin-bottom: 5px;
+    }
+
+    #locales p{
+        color:#f2f2f2;
+        font-size:15px;
+    }
+
+    #servicios .separar{
+        color:#f2f2f2;
+        
+    }
+
+    #servicios .fab{
+        color:#f2f2f2;
+    }
+
+    #servicios h2{
+        transform: scale(1);
+
+    
+    }
+
+    
+
+    #locales h2{
+        transform: scale(1);
+       
+       
+    }
+
+
+    #lacarta .titulos{
+        transform: scale(1);
+        
+    }
+  
+    
+
+    
+    .margen-abajo-mobile{
+        margin-bottom:10px;
+    }
+    #servicios p:hover{
+        position:relative;
+        animation-name: mymove;
+        animation-timing-function: linear;
+        animation-duration: 3s;
+    }
+
+    .separar{
+        font-size:15px;
+    }
+    
+    #banner p{
+        font-size:13px;
+    }
+
+    #banner h1{
+        font-size:14px;
+
+    }
+
+    .boton{
+        font-size: 15px;
+        padding:5px 10px;
+        text-decoration: none;
+        text-align: center;
+        border:1px solid #003E1F;
+        border-radius: 15%;
+        text-transform: uppercase;
+        color:#678B5F;
+        background-color:#D0E562;
+    }
+
+
+    
+}
+
 
